--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "include-all": "~0.1.3",
     "rc": "~0.5.0",
     "sails": "~0.11.4",
+    "sails-auth": "^2.1.3",
     "sails-mongo": "latest",
-    "swig":"latest"
+    "sails-permissions": "^2.2.0",
+    "swig": "latest"
   },
   "scripts": {
     "debug": "node debug app.js",
