--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "rc": "~0.5.0",
     "sails": "~0.11.4",
     "sails-auth": "^2.1.3",
+    "sails-hook-validation": "latest",
     "sails-mongo": "latest",
     "sails-permissions": "^2.2.0",
-    "sails-hook-validation":"latest",
+    "sails-postgresql": "^0.11.2",
     "swig": "latest"
   },
   "scripts": {
